# vae

./: ..gitignore.swp  .accuracy_eval.py.swp  .gitignore  README.md  accuracy_eval.py  callbacks.py  config.py  data_generator.py  eval.py  exemplars_nearest  exemplars_random  gmc_words  hyperparams.json  index.html  index.js  local.sh  one_hot.py  package-lock.json  package.json  params.py  run.bat  server.py  simple.py  splitutil.py  top  train.py  train.sh  vae.py  vae.sh  vae_linear.py  vae_old.py  vaegan.py  wordnet_gmc_pairs
analysis/entailment/: aardvark  abacus  abandon  abasement  abdicate  abdominal  abhorrence  ability  abolition  abolitionist  abort  abortion  above  abrasion  abridge  absent  absolution  absolutism  absorption  absurd  abundance  abyss  academia  academy  acceleration  accelerator  accent  acceptability  access  acclaim  accomplice  account  accreditation  accuracy  accused  acoustic  acoustics  acquisition  acrobat  activation  (+4684 more)
analysis/membership/exemplars_nearest/: I  a  aardvark  abacus  abandon  abandoned  abandonment  abasement  abatement  abbreviate  abbreviated  abbreviation  abdicate  abdomen  abdominal  abduct  abduction  abhorrence  abide  abiding  ability  abject  ablaze  able  abnormal  abnormality  abnormally  aboard  abode  abolish  abolishment  abolition  abolitionist  abominable  abomination  aboriginal  abort  abortion  abortive  abortively  (+18471 more)
analysis/membership/exemplars_random/: I  a  aardvark  abacus  abandon  abandoned  abandonment  abasement  abatement  abbreviate  abbreviated  abbreviation  abdicate  abdomen  abdominal  abduct  abduction  abhorrence  abide  abiding  ability  abject  ablaze  able  abnormal  abnormality  abnormally  aboard  abode  abolish  abolishment  abolition  abolitionist  abominable  abomination  aboriginal  abort  abortion  abortive  abortively  (+18426 more)
analysis/membership/means/: I  a  aardvark  abacus  abandon  abandoned  abandonment  abasement  abatement  abbreviate  abbreviated  abbreviation  abdicate  abdomen  abdominal  abduct  abduction  abhorrence  abide  abiding  ability  abject  ablaze  able  abnormal  abnormality  abnormally  aboard  abode  abolish  abolishment  abolition  abolitionist  abominable  abomination  aboriginal  abort  abortion  abortive  abortively  (+18477 more)
bash/: .entailment_parallel.swp  entailment_parallel.save  test  xaa  xab  xac  xad  xae  xaf  xag  xah  xai  xaj  xak  xal  xam  xan  xao  xap  xaq  xar  xas  xat
bins/abstract_adjectives/: 1  10  2  3  4  5  6  7  8  9
bins/abstract_combined/: 1  10  2  3  4  5  6  7  8  9
bins/abstract_nouns/: 1  10  2  3  4  5  6  7  8  9
bins/abstract_verbs/: 1  10  2  3  4  5  6  7  8  9
bins/adjectives_sample/: 1  10  2  3  4  5  6  7  8  9
bins/combined_sample/: 1  10  2  3  4  5  6  7  8  9
bins/concrete_adjectives/: 1  10  2  3  4  5  6  7  8  9
bins/concrete_combined/: 1  10  2  3  4  5  6  7  8  9
bins/concrete_nouns/: 1  10  2  3  4  5  6  7  8  9
bins/concrete_verbs/: 1  10  2  3  4  5  6  7  8  9
bins/nouns_sample/: 1  10  2  3  4  5  6  7  8  9
bins/verbs_sample/: 1  10  2  3  4  5  6  7  8  9
concrete_nouns/logs/: events.out.tfevents.1536787590.DESKTOP-JMQFSLD
data/: test_words  wordnet_gmc_filtered  wordnet_gmc_filtered_pairs
data/stratified/: xaa  xab  xac  xad  xae  xaf  xag  xah  xai  xaj  xak  xal  xam  xan  xao  xap  xaq  xar  xas  xat  xau  xav  xaw  xax  xay  xaz  xba  xbb  xbc  xbd  xbe  xbf  xbg  xbh  xbi  xbj  xbk  xbl  xbm  xbn  (+60 more)
electron/: eval.html  eval.js  index.html  index.js  package-lock.json  package.json
entailment/: abandonment  abbreviation  abdomen  abduction  abnormality  abomination  abound  abscess  absence  absenteeism  absolute  absolutist  abstain  abstinence  abstract  abstraction  absurdity  accelerate  accentuation  acceptor  accessory  accident  accidental  accompaniment  accomplishment  accountability  accountancy  accountant  accounting  accrue  accusation  accusative  acetone  ache  achieve  acid  acidification  acne  acorn  acquaintance  (+4421 more)
tests/: test_runtime  test_runtime.e1338720  test_runtime.o1338720
utils/: .entailment.py.swp  bibless_eval.py  bless_eval.py  cleanutil.py  compute_gaussians.py  compute_means.py  compute_membership.py  compute_reduced.py  crazy.py  entailment.py  entailment_parallel.py  evaluate_gaussians.py  extract_exemplar_originals.py  extract_wordsim.py  fix_keys.py  generate_entailment_jobs.py  get_encoding_word_indices.py  get_exemplars.py  metrics.py  pickle_exemplars.py  predict.py  reconstruct_exemplars.py  reduce_encodings.py  save_exemplars.py  set_aggregate.py  set_analysis.py  splitutil.py  wbless_eval.py  wordsim_analysis.py
